# dbot

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  distribution_test.m  package.xml  utests.cmake
cmake/: ccache-config.cmake  doxygen.cmake  glfw-config.cmake  gtest.cmake  info.cmake  sync_doc.cmake.in  target_failed.cmake.in  version.cmake
config/: config.yaml  config2.yaml  darpa.urdf  dev_test_example.yaml  dev_test_tracker.yaml  multi_object_config.yaml  object_config.yaml  object_config_fukf.yaml  robot_config.yaml  test_param_estimation_fpf.yaml  tracking_data_31.07.2014_04.24.44.txt  xtion_calib.yaml  xtion_calib_60Hz.yaml
doc/: Doxyfile.in  bibliography.bib  mainpage.dox  modules.dox
doc/theme/: customization.css  header.html  layout.xml  navtree_expand_selected.js
doxygen/: Doxyfile.in
include/dbot/: rao_blackwell_coordinate_particle_filter.hpp
include/dbot/states/: free_floating_rigid_bodies_state.hpp  rigid_bodies_state.hpp  robot_state.hpp
include/dbot/tracker/: object_tracker.hpp  rbc_particle_filter_object_tracker.hpp  rms_gaussian_filter_object_tracker.hpp
include/dbot/util/: camera_data.hpp  camera_data_provider.hpp  default_shader_provider.hpp  helper_functions.hpp  object_file_reader.hpp  object_model.hpp  object_model_loader.hpp  object_resource_identifier.hpp  rigid_body_renderer.hpp  simple_camera_data_provider.hpp  simple_shader_provider.hpp  simple_wavefront_object_loader.hpp  traits.hpp
include/dbot/utils/: helper_functions.hpp  part_mesh_model.hpp  pose_hashing.hpp  profiling.hpp  rigid_body_renderer.hpp  traits.hpp
include/dbot_ros_pkg/trackers/: fukf_test_tracker.hpp  object_tracker.hpp  robot_tracker.hpp
include/dbot_ros_pkg/utils/: image_publisher.hpp  kinematics_from_urdf.hpp  object_file_reader.hpp  pcl_interface.hpp  robot_tracking_dataset.hpp  ros_interface.hpp
include/pose_tracking/: pose_tracking.hpp
include/pose_tracking/states/: floating_body_system.hpp  free_floating_rigid_bodies_state.hpp  rigid_bodies_state.hpp  rigid_body_system.hpp  robot_kinematics.hpp  robot_state.hpp
include/pose_tracking/trackers/: object_tracker.hpp  robot_tracker.hpp
include/pose_tracking/utils/: cloud_visualizer.hpp  distribution_test.hpp  hash_mapping.hpp  helper_functions.hpp  image_visualizer.hpp  kinematics_from_urdf.hpp  object_file_reader.hpp  part_mesh_model.hpp  pcl_interface.hpp  rigid_body_renderer.hpp  ros_interface.hpp  tracking_dataset.hpp
include/pose_tracking_interface/trackers/: fukf_test_tracker.hpp  object_tracker.hpp  robot_tracker.hpp
include/pose_tracking_interface/utils/: cloud_visualizer.hpp  image_publisher.hpp  image_visualizer.hpp  kinematics_from_urdf.hpp  object_file_reader.hpp  pcl_interface.hpp  robot_tracking_dataset.hpp  tracking_dataset.hpp
include/state_filtering/: EstimateDescriptor.hpp  FilterContext.hpp  cpu_multi_object_tracker.hpp  multi_object_tracker.hpp  robot_tracker.hpp  run_cpu_coordinate_filter.hpp  state_filtering.hpp
include/state_filtering/distribution/: analytical_moments.hpp  distribution.hpp  empirical_moments.hpp  gaussian_mappable.hpp  probability_density_function.hpp  sampleable.hpp
include/state_filtering/distributions/: distribution.hpp  gaussian.hpp  standard_gaussian.hpp  standard_normal_distribution.hpp  statistical_gaussian.hpp  sum_of_deltas.hpp
include/state_filtering/filter/: FilterContext.hpp  estimate.hpp  filter.hpp  filter_context.hpp  types.hpp
launch/: cpu_multi_object_tracker.launch  dev_test_example.launch  dev_test_plots.launch  dev_test_tracker.launch  fukf_test_tracker.launch  multi_object_tracker.launch  object_tracker.launch  robot_tracker.launch  robot_tracker_evaluation.launch  robot_tracker_no_head_corrector.launch  robot_tracker_online_sim_data.launch  robot_tracker_sim_data.launch  run_cpu_coordinate_filter.launch  test_param_estimation_fpf.launch  xtion.launch  xtion_60Hz.launch
object/: calib_obj.blend
source/dbot/: camera_data.cpp  camera_data.h  camera_data_provider.h  camera_data_provider.hpp  default_shader_provider.cpp  default_shader_provider.h  default_shader_provider.hpp  file_shader_provider.cpp  file_shader_provider.h  file_shader_provider.hpp  file_shader_provider_test.cpp  helper_functions.h  object_file_reader.cpp  object_file_reader.h  object_model.cpp  object_model.h  object_model.hpp  object_resource_identifier.cpp  object_resource_identifier.h  object_resource_identifier_test.cpp  rigid_body_renderer.cpp  rigid_body_renderer.h  rigid_body_renderer.hpp  simple_camera_data_provider.cpp  simple_camera_data_provider.h  simple_camera_data_provider.hpp  simple_shader_provider.cpp  simple_shader_provider.h  simple_shader_provider_test.cpp  simple_wavefront_object_loader.cpp  simple_wavefront_object_loader.h  simple_wavefront_object_loader.hpp  virtual_camera_data_provider.cpp  virtual_camera_data_provider.h  virtual_camera_data_provider.hpp
src/dbot/: rao_blackwell_coordinate_particle_filter.hpp
src/pose_tracking/: pose_tracking.cpp
src/state_filtering/: cpu_multi_object_tracker_node.cpp  multi_object_tracker_node.cpp  robot_tracker_node.cpp  run_cpu_coordinate_filter.cpp  run_cpu_coordinate_filter_node.cpp  state_filtering.cpp
test/: CMakeLists.txt  composed_vector_test.cpp  euler_vector_test.cpp  file_shader_provider_test.cpp  gtest_main.cpp  object_resource_identifier_test.cpp  pose_vector_test.cpp  pose_velocity_vector_test.cpp  simple_shader_provider_test.cpp
tests/: CMakeLists.txt  factorized_unscented_transform_test.cpp  ff_gaussian_test.cpp  ff_kalman_filter_test.cpp  ff_linear_observation_model_test.cpp  ff_linear_process_model_test.cpp  file_shader_provider_test.cpp  fukf_continuous_kinect_pixel_observation_model_test.cpp  fukf_dummy_models.hpp  fukf_hash_tests.cpp  fukf_llt_diagonal_test.cpp  fukf_partitioned_ut_test.cpp  fukf_predict_test.cpp  fukf_smw_inversion_test.cpp  fukf_square_root_test.cpp  fukf_stub_models.hpp  fukf_ut_test.cpp  gtest_main.cpp  llt_diagonal_test.cpp  object_resource_identifier_test.cpp  partitioned_unscented_transform_test.cpp  smw_inversion_test.cpp
(+644 files in other folders)
