<?xml version="1.0"?>
<package>
  <name>dbot</name>
  <version>0.0.0</version>
  <description>Depth-Based Object Tracking Package</description>

  <maintainer email="jan.issac@gmail.com">Jan Issac</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author email="jan.issac@gmail.com">Jan Issac</author>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>OpenCV</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>robot_state_pub</build_depend>
  <build_depend>fl</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>robot_state_pub</run_depend>
  <run_depend>fl</run_depend>

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
