<?xml version="1.0"?>
<package>
  <name>dbot</name>
  <version>0.1.1</version>
  <description>The depth based object tracking package</description>

  <maintainer email="jan.issac@gmail.com">Jan Issac</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author email="jan.issac@gmail.com">Jan Issac</author>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>fl</build_depend>
  <build_depend>osr_catkin</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>fl</run_depend>
  <run_depend>osr_catkin</run_depend>

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
